--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 		</div>
 
 		<div class="center-panel">
-			
+				<div class='charting-options'></div>			
+				<div id='chart-container'></div>
 		</div>
 	</div>
 
@@ -55,7 +56,8 @@
 
 	<script src="js/jquery.min.js" type="text/javascript"></script>
 	<script src="js/underscore.min.js" type="text/javascript"></script>
-	
+	<script src="js/highcharts.js" type="text/javascript"></script>
+	<script src="js/moment.js" type="text/javascript"></script>
 	<script src="js/app.js" type="text/javascript"></script>
 </body>
 </html>
