Changes for live polling timer, USD-CNY line chart and other fixes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Foreign Exchange Prediction App</title>
+	<link href="css/fonts.css" type="text/css" rel="stylesheet" />
 	<link href="css/app.css" type="text/css" rel="stylesheet" />
 	<link rel="stylesheet" href="css/jquery-ui.css">
 </head>
@@ -19,32 +20,54 @@
 				<li class="currency-pair-container selected" data-pair="USDGBP" data-widget-id="971451597262761984">
 					<div class="currency-pair-title">USD/GBP</div>
 					<div class="live-currency-info"></div>
+					<div class="change-info">
+						<span class="percentage-change"></span>
+					</div>
 				</li>
 				<li class="currency-pair-container" data-pair="USDJPY" data-widget-id="971450524443619328">
 					<div class="currency-pair-title">USD/JPY</div>
 					<div class="live-currency-info"></div>
+					<div class="change-info">
+						<span class="percentage-change"></span>
+					</div>
 				</li>
 				<li class="currency-pair-container" data-pair="USDEUR" data-widget-id="971451058613469184">
 					<div class="currency-pair-title">USD/EUR</div>
 					<div class="live-currency-info"></div>
+					<div class="change-info">
+						<span class="percentage-change"></span>
+					</div>
 				</li>
 				<li class="currency-pair-container" data-pair="USDAUD" data-widget-id="971451808525594624">
 					<div class="currency-pair-title">USD/AUD</div>
 					<div class="live-currency-info"></div>
+					<div class="change-info">
+						<span class="percentage-change"></span>
+					</div>
 				</li>
 				<li class="currency-pair-container" data-pair="USDCAD" data-widget-id="971452014029717504">
 					<div class="currency-pair-title">USD/CAD</div>
 					<div class="live-currency-info"></div>
+					<div class="change-info">
+						<span class="percentage-change"></span>
+					</div>
 				</li>
 				<li class="currency-pair-container" data-pair="USDSGD" data-widget-id="971452367471222784">
 					<div class="currency-pair-title">USD/SGD</div>
 					<div class="live-currency-info"></div>
+					<div class="change-info">
+						<span class="percentage-change"></span>
+					</div>
 				</li>
 				<li class="currency-pair-container" data-pair="USDCNY" data-widget-id="971471902903492608">
 					<div class="currency-pair-title">USD/CNY</div>
 					<div class="live-currency-info"></div>
+					<div class="change-info">
+						<span class="percentage-change"></span>
+					</div>
 				</li>
 			</ul>
+			<div class="live-polling-status hide">* Refreshing data in <span class='live-polling-time-left'></span></div>
 		</div>
 
 		<div class="center-panel">
